--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+<html>
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>beauty school</title>
+    <title>My Life</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
@@ -108,82 +109,42 @@
                 <li data-target="#myCarousel" data-slide-to="1"></li>
                 <li data-target="#myCarousel" data-slide-to="2"></li>
                 <li data-target="#myCarousel" data-slide-to="3"></li>
-                <li data-target="#myCarousel" data-slide-to="4"></li>
-                <li data-target="#myCarousel" data-slide-to="5"></li>
-                <li data-target="#myCarousel" data-slide-to="6"></li>
-                <li data-target="#myCarousel" data-slide-to="7"></li>
-                <li data-target="#myCarousel" data-slide-to="8"></li>
             </ol>
 
             <!-- Wrapper for slides -->
             <div class="carousel-inner">
-
-                <div class="item active">
-                    <img src="pregnancypicture.jpg" alt="photoshoot" style="width:70%;">
-                    <div class="carousel-caption">
-                        <h3> a pregnancy photoshoot</h3>
-                        <p>pregnant with my son in beauty school</p>
-                    </div>
-                </div>
-
                 <div class="item">
-                    <img src="corecosmetology.jpg.jpg" alt="core" style="width:70%;">
+                    <img src="picture1.jpg" alt="Annie&Francesca" style="width:100%;">
                     <div class="carousel-caption">
-                        <h3>Core</h3>
-                        <p>changing career paths!</p>
+                        <h3>sisters</h3>
+                        <p>Me and my sister</p>
                     </div>
                 </div>
 
+
                 <div class="item">
-                    <img src="makeup1.jpg" alt="makeup artist" style="width:70%;">
+                    <img src="picture2.jpg" alt="Auggie" style="width:100%;">
                     <div class="carousel-caption">
-                        <h3>makeup</h3>
-                        <p>my first love!</p>
-                    </div>
-                </div>
-                <div class="item">
-                    <img src="makeup3.jpg" alt="makeup artist" style="width:70%;">
-                    <div class="carousel-caption">
-                        <h3>makeup</h3>
-                        <p>my first love!</p>
-                    </div>
-                </div>
-                <div class="item">
-                    <img src="makeup8.jpg" alt="makeup artist" style="width:70%;">
-                    <div class="carousel-caption">
-                        <h3>makeup</h3>
-                        <p>my first love!</p>
-                    </div>
-                </div>
-                <div class="item">
-                    <img src="makeup4.jpg" alt="makeup artist" style="width:70%;">
-                    <div class="carousel-caption">
-                        <h3>makeup</h3>
-                        <p>my first love!</p>
-                    </div>
-                </div>
-                <div class="item">
-                    <img src="makeup5.jpg" alt="makeup artist" style="width:70%;">
-                    <div class="carousel-caption">
-                        <h3>makeup</h3>
-                        <p>my first love!</p>
-                    </div>
-                </div>
-                <div class="item">
-                    <img src="makeup6.jpg" alt="makeup artist" style="width:70%;">
-                    <div class="carousel-caption">
-                        <h3>makeup</h3>
-                        <p>my first love!</p>
-                    </div>
-                </div>
-                <div class="item">
-                    <img src="makeup7.jpg" alt="makeup artist" style="width:70%;">
-                    <div class="carousel-caption">
-                        <h3>makeup</h3>
-                        <p>my first love!</p>
+                        <h3>Auggie</h3>
+                        <p>Auggie wants to drive!</p>
                     </div>
                 </div>
 
+                <div class="item">
+                    <img src="picture3.JPG" alt="Flaming" style="width:100%;">
+                    <div class="carousel-caption">
+                        <h3>Flaming</h3>
+                        <p> hot cheeto hair</p>
+                    </div>
+                </div>
+
+                <div class="item">
+                    <img src="picture4.jpg" alt="cameron" style="width:100%;">
+                    <div class="carousel-caption">
+                        <h3>cameron</h3>
+                        <p>cameron at 12 weeks!</p>
+                    </div>
+                </div>
             </div>
 
             <!-- Left and right controls -->
@@ -197,6 +158,13 @@
             </a>
         </div>
     </div>
+
+    <P> Welcome to my website! in the pictures above, the dog is my 13 week old puppy named cameron im currently
+        training him to be my service animal, thats my baby who looks like hes ready to drive! that is my youngest
+        sister who i am very close to and the other picture was a picture of me with red hair, i sadly had to color it
+        natural since i have to heal my hair since i did a lot of chemical services to it, i do miss my red hair, but i
+        feel ihave to give my red hair a break! </P>
+
 </body>
 
 </html>
