--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
         body {
             margin: 0;
             font-size: 28px;
-            font-family: Arial, Helvetica, sans-serif;
+            font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
         }
 
         .header {
@@ -73,8 +73,8 @@
 <body>
 
     <div class="header">
-        <h2>Scroll Down</h2>
-        <p>Scroll down to see the sticky effect.</p>
+        <h2></h2>
+        <p></p>
     </div>
 
     <div id="navbar">
@@ -115,7 +115,7 @@
 
 
     <a target="_blank" href="baby1.jpg">
-        <img src="baby1.jpg" alt="baby1" style="width:150px">
+        <img src="IMG/baby1.jpg" alt="baby1" style="width:150px">
     </a>
 
 
