--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<html>
+
 
 <head>
     <meta charset="UTF-8">
@@ -9,9 +9,11 @@
     <title>My Life</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script> -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <title>Document</title>
     <style>
         body {
@@ -76,12 +78,12 @@
 
     <div id="navbar">
         <a class="active" href="index.html">Home</a>
-        <a href="about.html">about</a>
+        <a href="about.html">About</a>
         <a href="contact.html">Contact</a>
     </div>
     <div class="content">
         <h3></h3>
-        <p></p>
+
     </div>
 
     <script>
@@ -100,63 +102,44 @@
             }
         }
     </script>
-    <div class="container">
-        <h2>Carousel Example</h2>
-        <div id="myCarousel" class="carousel slide" data-ride="carousel">
-            <!-- Indicators -->
-            <ol class="carousel-indicators">
-                <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-                <li data-target="#myCarousel" data-slide-to="1"></li>
-                <li data-target="#myCarousel" data-slide-to="2"></li>
-                <li data-target="#myCarousel" data-slide-to="3"></li>
-            </ol>
+    <div id="demo" class="carousel slide" data-bs-ride="carousel">
 
-            <!-- Wrapper for slides -->
-            <div class="carousel-inner">
-                <div class="item">
-                    <img src="picture1.jpg" alt="Annie&Francesca" style="width:100%;">
-                    <div class="carousel-caption">
-                        <h3>sisters</h3>
-                        <p>Me and my sister</p>
-                    </div>
-                </div>
-
-
-                <div class="item">
-                    <img src="picture2.jpg" alt="Auggie" style="width:100%;">
-                    <div class="carousel-caption">
-                        <h3>Auggie</h3>
-                        <p>Auggie wants to drive!</p>
-                    </div>
-                </div>
-
-                <div class="item">
-                    <img src="picture3.JPG" alt="Flaming" style="width:100%;">
-                    <div class="carousel-caption">
-                        <h3>Flaming</h3>
-                        <p> hot cheeto hair</p>
-                    </div>
-                </div>
-
-                <div class="item">
-                    <img src="picture4.jpg" alt="cameron" style="width:100%;">
-                    <div class="carousel-caption">
-                        <h3>cameron</h3>
-                        <p>cameron at 12 weeks!</p>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Left and right controls -->
-            <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-                <span class="glyphicon glyphicon-chevron-left"></span>
-                <span class="sr-only">Previous</span>
-            </a>
-            <a class="right carousel-control" href="#myCarousel" data-slide="next">
-                <span class="glyphicon glyphicon-chevron-right"></span>
-                <span class="sr-only">Next</span>
-            </a>
+        <!-- Indicators/dots -->
+        <div class="carousel-indicators">
+            <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
+            <button type="button" data-bs-target="#demo" data-bs-slide-to="1"></button>
+            <button type="button" data-bs-target="#demo" data-bs-slide-to="2"></button>
+            <button type="button" data-bs-target="#demo" data-bs-slide-to="3"></button>
         </div>
+
+        <!-- The slideshow/carousel -->
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="IMG/picture1.jpg" alt="picture1" class="d-block" style="width:400px;">
+            </div>
+            <div class="carousel-item">
+                <img src="IMG/picture2.jpg" alt="picture2" class="d-block" style="width:400px">
+            </div>
+            <div class="carousel-item">
+                <img src="IMG/picture3.JPG" alt="picture2" class="d-block" style="width:400px">
+            </div>
+            <div class="carousel-item">
+                <img src="IMG/picture4.jpg" alt="picture4" class="d-block" style="width:400px">
+            </div>
+        </div>
+
+        <!-- Left and right controls/icons -->
+        <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon"></span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#demo" data-bs-slide="next">
+            <span class="carousel-control-next-icon"></span>
+        </button>
+    </div>
+
+    <div class="container-fluid mt-3">
+        <h3></h3>
+        <p></p>
     </div>
 
     <P> Welcome to my website! in the pictures above, the dog is my 13 week old puppy named cameron im currently
